--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="div2" style=" height: 70px;text-align: center; border-radius: 40px;margin-top: -255px; background-color: rgba(0, 0, 0, 0.349);">    
     
-    <div style="margin-right: 450px;color: rgb(255, 255, 255);"><h2>AL YOUSUF ASSOCIATE</h2></div>
+    <div style="margin-right: 450px;color: rgb(255, 255, 255);"><h2>AL YUSUF ASSOCIATES</h2></div>
     <div style="margin-right: 50px; color: rgb(255, 255, 255);;"><h2>Home</h2></div>
     <div style="margin-right: 50px;color: rgb(255, 255, 255);"><h2>Contacts</h2></div>
     <div style="margin-right: 50px;color: rgb(255, 255, 255);"><h2>Agents</h2></div>
@@ -28,7 +28,7 @@
 </div>
 
 
-<h1 style="margin-top: 200px; background-color: rgba(0, 0, 0, 0.411); border-radius: 50PX;">AL YOUSUF ASSOCIATE</h1>
+<h1 style="margin-top: 200px; background-color: rgba(0, 0, 0, 0.411); border-radius: 50PX;">AL YOUSUF ASSOCIATES</h1>
 
 </div>
 
