--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 
 
-<h1 style="margin-top: 200px; background-color: rgba(0, 0, 0, 0.411); border-radius: 50PX;">AL YOUSUF ASSOCIATES</h1>
+<h1 style="margin-top: 200px; background-color: rgba(0, 0, 0, 0.411); border-radius: 50PX;">AL YUSUF ASSOCIATES</h1>
 
 </div>
 
